# MineUtaU

./: .gitignore  README.md  pyproject.toml
resources/: pinyin.txt
src/: main.py
test/: fsb5_ext.py
tools/bedrock_fsb_extracter/: README.md  main.py  pyproject.toml  run_for_extract.slurm.sh  test_for_mpi.py
tools/wave_comparison/: main.py  pyproject.toml
