[project]
    name            = "MineUtaU"
    dynamic         = ["version"]
    description     = "一个针对 Minecraft 原版音效包的类人力 Vocaloid 语音/歌声合成工具。 "
    readme          = "README.md"
    requires-python = ">=3.8"
    dependencies    = []

[tool.uv.workspace]
    members = [
        "tools/bedrock_fsb_extracter",
    ]


[tool.pdm.version]
    source = "file"
    path   = "src/main.py"

[tool.pyright]
    typeCheckingMode = "standard"
