[project]
    name = "bedrock-fsb-extracter"
    version = "0.0.1"
    description = "Extract FSB5 files from Bedrock Edition"
    readme = "README.md"
    requires-python = ">=3.8"
    dependencies = [
        "trimo-fsb5>=0.1.1",
    ]

[project.optional-dependencies]
    mpi = [
        "mpi4py>=4.0.3",
    ]
